..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers work without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)
........S. [ZBXNEXT-1663] added support for notification macros {TRIGGER.NAME.ORIG}, {ITEM.NAME.ORIG}, {ITEM.KEY.ORIG} (dimir)

Bug fixes:
..F....... [ZBX-6268] removed links from inactive subfilter items in item list (Eduard)
A......... [ZBX-6446] removed unused getObjects() method from Script API (Eduard)
..F....... [ZBX-6710] fixed item list display after item deletion (Ivo)
..F....... [ZBX-6718] fixed "placeholder" attribute for IE9 (Ivo)
A......... [ZBX-6399] fixed map element linking (Eduard)
..F....... [ZBX-6447] fixed time control start time calculation using filter in audit administration (Eduard)
A.F....... [ZBX-6678] added write permissions check in graphs and graphprototypes for Y axis MIN/MAX items (Ivo)
..F....... [ZBX-5672] fixed horizontal grid and Y axis for graphs (Oleg)
..F....... [ZBX-6692] fixed displaying age and last change in monitoring triggers page (Ivo)
..F....... [ZBX-5711] fixed that favorites were not added in dashboard (Toms)
..F....... [ZBX-4620] added escaping of HTML entities for search results as well for item and trigger pages (Toms)
..F....... [ZBX-4620] fixed that item sub-filters were impossible to unset in items.php (Toms)
..F....... [ZBX-5620] fixed edit forms layout (Eduard)
..F....... [ZBX-6597] removed debug trace in frontend for unsuccessful login if debug mode is enabled for guest group (Toms)
...G...... [ZBXNEXT-1550] fixed agent crash on Microsoft Windows (Andris)
..F....... [ZBX-6679] fixed monitoring event filter, must ignore groups and hosts without active triggers (Eduard)
..F....... [ZBX-6685] fixed multiselect available data sorting in jsrpc (Eduard)
A......... [ZBX-6356] fixed displaying web scenarios for administrator users (Ivo)