@@ -75,6 +75,7 @@ A.F.I...S. [ZBXNEXT-1186] increased length to 2048 characters of expression fiel
 ........S. [ZBXNEXT-1663] added support for notification macros {TRIGGER.NAME.ORIG}, {ITEM.NAME.ORIG}, {ITEM.KEY.ORIG} (dimir)
 
 Bug fixes:
+..F.I..... [ZBX-6645] suppressed PHP error messages for MySQL and PostgreSQL connection tests in installation wizard step 3 (Ivo)
 ..F....... [ZBX-6268] removed links from inactive subfilter items in item list (Eduard)
 A......... [ZBX-6446] removed unused getObjects() method from Script API (Eduard)
 ..F....... [ZBX-6710] fixed item list display after item deletion (Ivo)
